test/compile_failure/18_string_too_long.c
// EXPECT-ERRORS: 1
// EXPECT: initializer string is too long
char text[2] = "long";
